# reio

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.MD  README.MD
.github/workflows/: build-primary.yml
include/reio/: _docs.hpp  allocators.hpp  asserts.hpp  types.hpp
include/reio/buffers/: owning_buffer.hpp  weak_buffer.hpp
include/reio/streams/: file_streams.hpp  memory_streams.hpp  streams.hpp
src/: allocators.cpp
src/buffers/: owning_buffer.cpp
src/streams/: file_streams.cpp  memory_streams.cpp  streams.cpp
tests/: all.cpp
tests/reio/: test_types.cpp
tests/reio/buffers/: test_owning_buffer.cpp  test_weak_buffer.cpp
tests/reio/streams/: test_memory_streams.cpp
